# g1_factory_isaac

./: LICENSE  README.md  __init__.py  pyproject.toml
agents/: __init__.py  ppo_cfg.py
assets/: __init__.py  g1.urdf  g1_cfg.py
mdp/: __init__.py  observations.py  rewards.py  terminations.py
scripts/: play.py  ray_interface.sh  train.py
scripts/local_ray/: .env.ray  job_config.yaml  ray_interface.sh  submit_job.py
scripts/ray/: util.py  wrap_resources.py
tasks/: __init__.py  factory_env_cfg.py
